# CutePlayer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TECHNICAL_DESIGN.md  run.sh  vcpkg.json  xmake.lua
backup/: audio_thread.cpp  core.cpp  logger.cpp  main.cpp  mp4_rgb24_ppm.cpp  raii.hpp  video_thread.cpp
data/input/: k-on_h265_part.ts
data/ouput/: k-on_h265_part.h265  sintel.h264
docs/: ffmpeg_api.md  音视频播放器项目文档.md  项目文档.md
ffmpeg_demo/: CMakeLists.txt  cut.cpp  extract_audio.cpp  extract_video.cpp  remux _RAII.cpp  remux.cpp  remux_audio_video.cpp
include/avplayer/: core.hpp  player.hpp
include/cuteplayer/: audio_thread.hpp  common.hpp  const.hpp  core.hpp  logger.hpp  main.hpp  player.hpp  raii.hpp  read_thread.hpp  video_thread.hpp
misc/: new_player.cpp  new_player.hpp
src/: CMakeLists.txt  add_audio.cpp  audio_thread.cpp  chatgpt_player.cpp  common.cpp  core.cpp  logger.cpp  main.cpp  mp4_rgb24_ppm.cpp  player.cpp  read_thread.cpp  simple_video_player.cpp  use_sdl2.cpp  video_thread.cpp
src/rgb2ppm/: mp4_to_rgb24_to_ppm.cpp
src/simple_audio_player/: CMakeLists.txt  simple_audio_player.cpp  test_audio.cpp
src/simple_video_player/: CMakeLists.txt  simple_video_player.cpp
tests/: tutorial03-resampled.cpp
